Add new project PhaoHoa2

--- a/Phao-Hoa-IamHuongDev/index.html
+++ b/Phao-Hoa-IamHuongDev/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-  
+   
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -20,10 +20,21 @@
     <link href="https://fonts.googleapis.com/css?family=Russo+One" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
     <link rel="stylesheet" href="style.css">
+   
   
 </head>
 
 <body>
+    <!--decorate-->
+    <style type="text/css">
+        body{padding-bottom:20px}
+    </style>
+    <a  target="_blank">
+        <img style="position:fixed;z-index:9999;top:0;left:0;wight:300px; height: 400px;" src="https://1.bp.blogspot.com/-hIJ6xYT7eYg/WGtqaZpELPI/AAAAAAAAAg8/Ef1sIA0AbqoNU0ey0WvRo2cH69AkdpSpgCLcB/s1600/caudoi4.png" _cke_saved_src="https://1.bp.blogspot.com/-hIJ6xYT7eYg/WGtqaZpELPI/AAAAAAAAAg8/Ef1sIA0AbqoNU0ey0WvRo2cH69AkdpSpgCLcB/s1600/caudoi4.png"/></a>
+        <a  target="_blank">
+            <img style="position:fixed;z-index:9999;top:0;right:0; wight:300px; height: 400px;" src="https://1.bp.blogspot.com/-0I4Z9Gxt8gk/WGtqarV3nfI/AAAAAAAAAhA/J8kCaSv7SygkODYHDKhD_CDo2ZhGwvAFQCLcB/s1600/caudoi3.png"/></a>
+            <a  target="_blank">
+            <img style="position:fixed;z-index:9999;bottom:0px;left:0px" src="https://4.bp.blogspot.com/-NXAKHkptLfE/WGpsupe2cLI/AAAAAAAAAf0/9upaC2k03ZU8zebW8MTy0Bvis3ZnZOTXQCLcB/s1600/bottom.png"/></a>
 
     <!-- SVG Spritesheet -->
     <div style="height: 0; width: 0; position: absolute; visibility: hidden;">
